--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,12 +5,14 @@
 
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #0F1216;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+
+    min-height: 100vh;
 }
 
 * {
@@ -35,7 +37,8 @@ a:hover {
     justify-content: center;
     /*place-items: center;*/
     min-width: 320px;
-    min-height: 100vh;
+    /*min-height: 100vh;*/
+    height: auto;
 }
 
 .header {
@@ -43,7 +46,7 @@ a:hover {
     width: 95vw;
     padding: 15px;
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     /*padding: 0 15px;*/
     background-color: #151A21;
     border-radius: 20px;
@@ -58,7 +61,7 @@ h1 {
 .main {
     display: flex;
     width: 95vw;
-    height: 100vh;
+    /*height: 100vh;*/
     margin: 0 auto;
 }
 
@@ -71,7 +74,9 @@ h1 {
 }
 
 .navbar {
-    margin: 15px 10px 20px 0;
+    display: flex;
+    flex-direction: column;
+    margin: 15px 10px auto 0;
     padding: 20px;
     /*width: 40%;*/
     max-width: 250px;
@@ -80,8 +85,11 @@ h1 {
     border-radius: 20px;
     border: 2px solid #26303D;
 }
+.burger {
+    display: none;
+}
 
-button {
+.navbar button {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #1B212A;
     border-radius: 15px;
@@ -126,8 +134,14 @@ button:focus-visible {
         margin: 0 auto;
     }
 
-    .navbar {
+    .navbar--static {
         display: none;
+    }
+    .burger {
+        display: flex;
+    }
+    .navbar--drawer {
+        display: flex !important;
     }
 
     .__right-block {
